--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-HK">
 <head>
+    <!-- Google Ads Tag -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17713083183"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-17713083183');
+    </script>
+    <!-- End Google Ads Tag -->
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AUSTIN BOHEMIAN 瑧爾 | 西九高鐵文藝商圈</title>
@@ -17,18 +27,29 @@
                     <span class="logo-text">AUSTIN BOHEMIAN</span>
                 </a>
             </div>
-            <nav class="main">
-                <div class="sales">
+
+            <!-- 漢堡選單按鈕 -->
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            
+            <!-- 電腦版導航 -->
+            <nav class="main-nav">
+                <div class="sales-nav">
                     <ul>
-                        <li><a href="#" target="_blank">售樓說明書</a></li>
-                        <li><a href="#" target="_blank">價單</a></li>
-                        <li><a href="#" target="_blank">銷售安排</a></li>
-                        <li><a href="#" target="_blank">成交紀錄冊</a></li>
-                        <li><a href="#" target="_blank">公契</a></li>
-                        <li><a href="#" target="_blank">鳥瞰照片</a></li>
+                        <li><a href="https://cms.nwd.com.hk//html/tchi/property_brochure.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">售樓說明書</a></li>
+                        <li><a href="https://cms.nwd.com.hk//html/tchi/property_price2.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">價單</a></li>
+                        <li><a href="https://cms.nwd.com.hk//html/tchi/property_SalesArrangement.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">銷售安排</a></li>
+                        <li><a href="https://cms.nwd.com.hk//html/tchi/property_report2.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">成交紀錄冊</a></li>
+                        <li><a href="https://cms.nwd.com.hk//html/tchi/property_deed.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">公契</a></li>
+                        <li><a href="https://cms.nwd.com.hk//html/tchi/property_photo.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">鳥瞰照片</a></li>
+                        <li><a href="https://cms.nwd.com.hk//html/tchi/property_Tender.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">招標文件</a></li>
+                        <li><a href="https://cms.nwd.com.hk//html/tchi/property_ballotingresult.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">抽籤結果</a></li>
                     </ul>
                 </div>
-                <div class="section">
+                <div class="section-nav">
                     <ul>
                         <li><a href="#home">首頁</a></li>
                         <li><a href="#about">西九高鐵文藝商圈</a></li>
@@ -37,17 +58,25 @@
                     </ul>
                 </div>
             </nav>
-            <nav class="function">
-                <div class="lang">
-                    <ul>
-                        <li><a href="#">EN</a></li>
-                        <li><a href="#" class="active">繁體</a></li>
-                        <li><a href="#">简体</a></li>
-                    </ul>
-                </div>
-            </nav>
         </div>
     </header>
+
+    <!-- 手機版選單 - 必須添加這部分 -->
+<div class="mobile-menu">
+    <ul>
+        <li><a href="#contact" class="mobile-nav-link">聯絡我們</a></li>
+        <li><a href="https://cms.nwd.com.hk//html/tchi/property_brochure.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">售樓說明書</a></li>
+        <li><a href="https://cms.nwd.com.hk//html/tchi/property_price2.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">價單</a></li>
+        <li><a href="https://cms.nwd.com.hk//html/tchi/property_SalesArrangement.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">銷售安排</a></li>
+        <li><a href="https://cms.nwd.com.hk//html/tchi/property_Tender.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">招標文件</a></li>
+        <li><a href="https://cms.nwd.com.hk//html/tchi/property_report2.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">成交紀錄冊</a></li>
+        <li><a href="https://cms.nwd.com.hk//html/tchi/property_deed.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">公契</a></li>
+        <li><a href="https://cms.nwd.com.hk//html/tchi/property_photo.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">鳥瞰照片</a></li>
+        <li><a href="https://cms.nwd.com.hk//html/tchi/property_ballotingresult.aspx?QXw7jD2r2h%2balRT18me3fL5OKRmVJJI0s%2fMzuBoqjKI%3d=" target="_blank">抽籤結果</a></li>
+    </ul>
+</div>
+<div class="menu-overlay"></div>
+
 
     <main>
         <!-- 第1頁：單獨影片 -->
@@ -82,7 +111,6 @@
                         <p>國際知名建築師團隊操刀，融合現代簡約與傳統工藝</p>
                     </div>
                     <div class="feature-card">
-                        <h3>綠意生活空間</h3>
                         <h3>完善生活配套</h3>
                         <p>購物、餐飲、教育、醫療一應俱全</p>
                     </div>
@@ -108,41 +136,42 @@
                         創意與靈感如音符般自在流淌，凝聚成嶄新都會特色。
                     </div>
                     <div class="collection-cta">
-                        <a href="#" class="btn">項目影片</a>
-                        <a href="#" class="btn">詳細簡介</a>
+                        <a href="video-player.html" class="btn">項目影片</a>
+                        <a href="documents/leaflet_bohemian-collection.pdf" class="btn" target="_blank">詳細簡介</a>
                     </div>
                 </div>
-<div class="collection-grid">
-    <div class="grid-item">
-        <img src="./images/artisan_house.jpg" alt="ARTISAN HOUSE 瑧蓺" class="grid-image">
-        <div class="overlay">
-            <h3>ARTISAN HOUSE</h3>
-            <p>瑧蓺 - 工匠藝術之家</p>
-        </div>
-    </div>
-    <div class="grid-item">
-        <img src="./images/timber_house.jpg" alt="TIMBER HOUSE 瑧樺" class="grid-image">
-            <div class="overlay">
-            <h3>TIMBER HOUSE</h3>
-            <p>瑧樺 - 自然木質風格</p>
-        </div>
-    </div>
-    <div class="grid-item">
-        <img src="./images/bohemian_house.jpg" alt="TIMBER HOUSE 瑧璈" class="grid-image">
-               <div class="overlay">
-            <h3>BOHEMIAN HOUSE</h3>
-            <p>瑧璈 - 波希米亞風情</p>
-        </div>
-    </div>
-    <div class="grid-item">
-        <img src="./images/artisan_garden.jpg" alt="ARTISAN GARDEN 瑧尚" class="grid-image">
-            <div class="overlay">
-            <h3>ARTISAN GARDEN</h3>
-            <p>瑧尚 - 園藝工匠之美</p>
-        </div>
-    </div>
-</div>
-</section>
+                <div class="collection-grid">
+                    <div class="grid-item">
+                        <img src="./images/artisan_house.jpg" alt="ARTISAN HOUSE 瑧蓺" class="grid-image">
+                        <div class="overlay">
+                            <h3>ARTISAN HOUSE</h3>
+                            <p>瑧蓺 - 工匠藝術之家</p>
+                        </div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="./images/timber_house.jpg" alt="TIMBER HOUSE 瑧樺" class="grid-image">
+                        <div class="overlay">
+                            <h3>TIMBER HOUSE</h3>
+                            <p>瑧樺 - 自然木質風格</p>
+                        </div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="./images/bohemian_house.jpg" alt="BOHEMIAN HOUSE 瑧璈" class="grid-image">
+                        <div class="overlay">
+                            <h3>BOHEMIAN HOUSE</h3>
+                            <p>瑧璈 - 波希米亞風情</p>
+                        </div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="./images/artisan_garden.jpg" alt="ARTISAN GARDEN 瑧尚" class="grid-image">
+                        <div class="overlay">
+                            <h3>ARTISAN GARDEN</h3>
+                            <p>瑧尚 - 園藝工匠之美</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- 第4頁：聯絡我們 -->
         <section id="contact" class="contact">
@@ -150,8 +179,12 @@
                 <h2>聯絡我們</h2>
                 <p>預約參觀展示單位，親身體驗BOHEMIAN生活藝術</p>
                 <div class="cta">
-                    <a href="https://wa.me/85253435062?text=%E4%BD%A0%E5%A5%BD%EF%BC%8C%E6%88%91%E6%83%B3%E4%BA%86%E8%A7%A3%E6%9B%B4%E5%A4%9AAUSTIN%20BOHEMIAN%20%E7%91%A7%E7%88%BE" class="btn primary">銷售熱線</a>
-                  </div>
+                    <a href="https://wa.me/85253435062?text=%E4%BD%A0%E5%A5%BD%EF%BC%8C%E6%88%91%E6%83%B3%E7%8D%B2%E5%BE%97%E6%9B%B4%E5%A4%9A%E3%80%8CAUSTIN%20BOHEMIAN%20%E7%91%A7%E7%88%BE%E3%80%8D%E8%A9%B3%E6%83%85%EF%BC%8C%E5%92%8C%E9%A0%90%E7%B4%84%E5%8F%83%E8%A7%80%E7%A4%BA%E7%AF%84%E5%96%AE%E4%BD%8D%E3%80%82" 
+                       class="btn primary" 
+                       target="_blank">
+                        銷售熱線
+                    </a>
+                </div>
             </div>
         </section>
     </main>
@@ -164,10 +197,43 @@
                 賣方的控權公司：新世界發展有限公司 | 預計關鍵日期：2027年6月30日<br>
                 準買家如欲了解發展項目的詳情，請參閱售樓說明書。
             </div>
-            <p>本廣告/宣傳資料內載列的相片、圖像、繪圖或素描顯示純屬畫家對有關發展項目之想像。有關相片、圖像、繪固或素描並非按照比例繪畫及/或可能經過電腦修飾處理。準買家如欲了解發展項目的詳情，請參閱售樓說明書>。賣方亦建議準買象到有關發展地盤作寞地考察，以對該發展地盤、其周邊地區環境及附近的公共設施有較佳了解。
-。^上述門牌號數為臨時門牌號數，有待該發展項目建成時確認。發展項目名稱：瑧爾（下稱「發展項目」）。賣方：PROFIT JET HOLDINGS LIMITED。賣方的控權公司：新世界發展有限公司、PERFECT NOBLE INTERNATIONAL LIMITED*。發展項目的認可人士及該認可人士以其專業身份擔任經營人、董事或僱員的商號或法團：馬梁建築師事務所（香港）有限公司的區健斌先生。發展項目的承建商：協興建業有限公司。就發展項目中的住宅物業的出售而代表擁有人行事的律師事務所：胡關李羅律師行。已為發展項目的建造提供貸款或已承諾為該項建造提供融資的認可機構：不適用。已為發展項目的建造提供貸款的任何其他人：新世界金融有限公司。盡賣方所知發展項目的預計關鍵日期為2027年6月30日（「關鍵日期」指該項目在遵照經批准的建築圖則的情況下在各方面均屬完成的日期。預計關鍵日期是受到買賣合約所允許的任何延期所規限的。）。賣方建議準買方參閱有關售樓說明書>，以了解本發展項目的資料。>於本網站的上次更新日期，本發展項目的售樓說明書尚未提供。* PERFECT NOBLE INTERNATIONAL LIMITED為英屬處女群島成立之有限法律責任的公司。+「BOHEMIAN COLLECTION」系列是指包括EIGHT SOUTH LANE、SKYPARK、瑧璈、瑧蓺、瑧樺、瑧尚、瑧博及瑧爾在內之不同住宅項目，各項目分別受其各自之批地文件管轄。上述之其他住宅項目與賣方、發展項目無關。「BOHEMIAN COLLECTION」僅屬推廣名稱，不會用於或出現於建築圖則、買賣合約、公契、轉讓契或其他業松或法律文件中。本頁旨在提供更多一手新盤資料及圖片檔案服務只供閱覽；不聲明或保證所提供訊息的準確性和完整性。在撰寫本頁時，雖已作出合理和謹慎的考慮，對資料的完整和準確性恕不保證、明示或暗示絕對無誤。本頁並不是發展項目之官方網站網頁。本頁內的圖片與發展商的樓盤並無任何關係。準買家如欲了解發展項目詳情，請參閱售樓說明書。資料有可能出現售價、現金或其他條件上的改動，或撤回而不經提前通知，並可能受特別條款約束。因使用此資料而直接或間接引致的損失或損毀。本頁恕不負責。本頁內所有內容包括一手新盤資料，僅供參考和借鑒，物業資料，一切以發展商最新公布為準。本頁面所提到房屋面積如無特別標示，均指實用面積。客戶應自行確保資料或，內容的完整性和準確性。所載資料僅供參考，並不構成要約或合約一部份。如有需要，瀏覽者應自行咨詢相關法律及/或專業意見。</p>
+            <p>本廣告/宣傳資料內載列的相片、圖像、繪圖或素描顯示純屬畫家對有關發展項目之想像。有關相片、圖像、繪固或素描並非按照比例繪畫及/或可能經過電腦修飾處理。準買家如欲了解發展項目的詳情，請參閱售樓說明書。賣方亦建議準買象到有關發展地盤作寞地考察，以對該發展地盤、其周邊地區環境及附近的公共設施有較佳了解。
+            。^上述門牌號數為臨時門牌號數，有待該發展項目建成時確認。發展項目名稱：瑧爾（下稱「發展項目」）。賣方：PROFIT JET HOLDINGS LIMITED。賣方的控權公司：新世界發展有限公司、PERFECT NOBLE INTERNATIONAL LIMITED*。發展項目的認可人士及該認可人士以其專業身份擔任經營人、董事或僱員的商號或法團：馬梁建築師事務所（香港）有限公司的區健斌先生。發展項目的承建商：協興建業有限公司。就發展項目中的住宅物業的出售而代表擁有人行事的律師事務所：胡關李羅律師行。已為發展項目的建造提供貸款或已承諾為該項建造提供融資的認可機構：不適用。已為發展項目的建造提供貸款的任何其他人：新世界金融有限公司。盡賣方所知發展項目的預計關鍵日期為2027年6月30日（「關鍵日期」指該項目在遵照經批准的建築圖則的情況下在各方面均屬完成的日期。預計關鍵日期是受到買賣合約所允許的任何延期所規限的。）。賣方建議準買方參閱有關售樓說明書，以了解本發展項目的資料。於本網站的上次更新日期，本發展項目的售樓說明書尚未提供。* PERFECT NOBLE INTERNATIONAL LIMITED為英屬處女群島成立之有限法律責任的公司。+「BOHEMIAN COLLECTION」系列是指包括EIGHT SOUTH LANE、SKYPARK、瑧璈、瑧蓺、瑧樺、瑧尚、瑧博及瑧爾在內之不同住宅項目，各項目分別受其各自之批地文件管轄。上述之其他住宅項目與賣方、發展項目無關。「BOHEMIAN COLLECTION」僅屬推廣名稱，不會用於或出現於建築圖則、買賣合約、公契、轉讓契或其他業松或法律文件中。本頁旨在提供更多一手新盤資料及圖片檔案服務只供閱覽；不聲明或保證所提供訊息的準確性和完整性。在撰寫本頁時，雖已作出合理和謹慎的考慮，對資料的完整和準確性恕不保證、明示或暗示絕對無誤。本頁並不是發展項目之官方網站網頁。本頁內的圖片與發展商的樓盤並無任何關係。準買家如欲了解發展項目詳情，請參閱售樓說明書。資料有可能出現售價、現金或其他條件上的改動，或撤回而不經提前通知，並可能受特別條款約束。因使用此資料而直接或間接引致的損失或損毀。本頁恕不負責。本頁內所有內容包括一手新盤資料，僅供參考和借鑒，物業資料，一切以發展商最新公布為準。本頁面所提到房屋面積如無特別標示，均指實用面積。客戶應自行確保資料或，內容的完整性和準確性。所載資料僅供參考，並不構成要約或合約一部份。如有需要，瀏覽者應自行咨詢相關法律及/或專業意見。</p>
         </div>
     </footer>
+
+    <!-- 免責聲明彈出視窗 -->
+<div id="disclaimerModal" class="disclaimer-modal">
+    <div class="disclaimer-content">
+        <button class="disclaimer-close">&times;</button>
+        <div class="disclaimer-body">
+            <div class="disclaimer-text">
+                <p><strong>www.austinbohemians.com</strong></p>
+                <p>街道名稱及門牌號數 (臨時)：廣東道530 號<sup>^</sup></p>
+                <p>區域：油麻地</p>
+                <p>本廣告/宣傳資料內載列的相片、圖像、繪圖或素描顯示純屬畫家對有關發展項目之想像。有關相片、圖像、繪圖或素描並非按照比例繪畫及/或可能經過電腦修飾處理。準買家如欲了解發展項目的詳情，請參閱售樓說明書。賣方亦建議準買家到有關發展地盤作實地考察，以對該發展地盤、其周邊地區環境及附近的公共設施有較佳了解。</p>
+
+                <p>發展項目名稱：瑧爾 (下稱「發展項目」)。賣方：PROFITS JET HOLDINGS LIMITED。賣方的控權公司：新世界發展有限公司、PERFECTS NOBLE INTERNATIONAL LIMITED*。發展項目的認可人士及該認可人士以其專業身份擔任經營人、董事或僱員的商號或法團：馬梁建築師事務所(香港)有限公司的區健斌先生。發展項目的承建商：協興建業有限公司。就發展項目中的住宅物業的出售而代表擁有人行事的律師事務所：胡關李羅律師行。已為發展項目的建造提供貸款或已承諾為該項建造提供融資的認可機構：不適用。本頁旨在提供更多一手新盤資料及圖片檔案服務只供閱覽；不聲明或保證所提供訊息的準確性和完整性。在撰寫本頁時，雖已作出合理和謹慎的考慮，對資料的完整和準確性恕不保證、明示或暗示絕對無誤。本頁並不是發展項目之官方網站網頁。本頁內的圖片與發展商的樓盤並無任何關係。準買家如欲了解發展項目詳情，請參閱售樓說明書。資料有可能出現售價、現金或其他條件上的改動，或撤回而不經提前通知，並可能受特別條款約束。因使用此資料而直接或間接引致的損失或損毀。本頁恕不負責。本頁內所有內容包括一手新盤資料，僅供參考和借鑒，物業資料，一切以發展商最新公布為準。已為發展項目的建造提供貸款的任何其他人：新世界金融有限公司。本廣告由「瑧爾」之賣方發布。盡賣方所知發展項目的預計關鍵日期為2027年6月30日(「關鍵日期」指該項目在遵照經批准的建築圖則的情況下在各方面均屬完成的日期。預計關鍵日期是受到買賣合約所允許的任何延期所規限的。)。賣方建議準買方參閱有關售樓說明書，以了解本發展項目的資料。於本網站的上次更新日期，本發展項目的售樓說明書尚未提供。</p>
+
+                <p class="footnote">* PERFECTS NOBLE INTERNATIONAL LIMITED為英屬處女群島成立之有限法律責任的公司。</p>
+
+                <p class="footnote">+「BOHEMIAN COLLECTION」系列是指包括EIGHT SOUTH LANE、SKYPARK、瑧璈、瑧蓺、瑧樺、瑧尚、瑧博及瑧爾在內之不同住宅項目，各項目分別受其各自之批地文件管轄。上述之其他住宅項目與賣方、發展項目無關。「BOHEMIAN COLLECTION」僅屬推廣名稱，不會用於或出現於建築圖則、買賣合約、公契、轉讓契或其他業權或法律文件中。</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <!-- WhatsApp 浮動通話標記 -->
+    <div id="whatsapp-float">
+        <a href="https://wa.me/85253435062?text=%E4%BD%A0%E5%A5%BD%EF%BC%8C%E6%88%91%E6%83%B3%E7%8D%B2%E5%BE%97%E6%9B%B4%E5%A4%9A%E3%80%8CAUSTIN%20BOHEMIAN%20%E7%91%A7%E7%88%BE%E3%80%8D%E8%A9%B3%E6%83%85%EF%BC%8C%E5%92%8C%E9%A0%90%E7%B4%84%E5%8F%83%E8%A7%80%E7%A4%BA%E7%AF%84%E5%96%AE%E4%BD%8D%E3%80%82" 
+           target="_blank" 
+           class="whatsapp-float-btn"
+           title="WhatsApp 查詢">
+            <svg class="whatsapp-icon" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893-.001-3.189-1.262-6.187-3.55-8.444"/>
+            </svg>
+        </a>
+    </div>
 
     <script src="script.js"></script>
 </body>
