Fix: Add background music and improve mobile menu

--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
                     <div class="arrow"></div>
                 </div>
             </div>
+
+            <!-- 音樂控制放在第一頁內 -->
+    <div class="music-control-top">
+        <button id="musicToggle" class="music-toggle-btn">🔈</button>
+    </div>
+</section>
+
+<!-- 隱藏音樂播放器（放在body最後） -->
+<audio id="bgMusic" loop>
+    <source src="music/relax-guitar.mp3" type="audio/mpeg">
+</audio>
+
         </section>
 
         <!-- 第2頁：西九高鐵文藝商圈內容 -->
@@ -135,10 +147,10 @@
                         線條律動與光影交織，雕塑結構與建材的風格樹立，
                         創意與靈感如音符般自在流淌，凝聚成嶄新都會特色。
                     </div>
-                    <div class="collection-cta">
-                        <a href="video-player.html" class="btn">項目影片</a>
-                        <a href="documents/leaflet_bohemian-collection.pdf" class="btn" target="_blank">詳細簡介</a>
-                    </div>
+<div class="collection-cta">
+    <a href="https://www.youtube.com/embed/X3HuFFzg28w" class="btn" target="_blank">項目影片</a>
+    <a href="./documents/leaflet_bohemian-collection.pdf" class="btn" target="_blank">詳細簡介</a>
+</div> 
                 </div>
                 <div class="collection-grid">
                     <div class="grid-item">
@@ -236,5 +248,6 @@
     </div>
 
     <script src="script.js"></script>
+
 </body>
 </html>
