--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="zh-HK">
 <head>
     <!-- Google Ads Tag -->
-   <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17713083183"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17713083183'); </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17713083183"></script>
+    <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag(){ dataLayer.push(arguments); }
       gtag('js', new Date());
       gtag('config', 'AW-17713083183');
     </script>
     <!-- End Google Ads Tag -->
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AUSTIN BOHEMIAN 瑧爾 | 西九高鐵文藝商圈</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost&family=Noto+Sans+HK&family=Noto+Sans+SC&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
