--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="zh-HK">
 <head>
 <!-- Google Ads Tag -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17713083183"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'AW-17713083183');
-  </script>
+function gtag_report_conversion(url) {
+  var callback = function () {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  };
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17713083183/nMBACM7k7MEbEK_moP5B',
+      'event_callback': callback
+  });
+  return false;
+}
+</script>
     <!-- End Google Ads Tag -->
 
     <meta charset="UTF-8">
@@ -239,7 +246,8 @@
 
     <!-- WhatsApp 浮動通話標記 -->
     <div id="whatsapp-float">
-        <a href="https://wa.me/85253435062?text=%E4%BD%A0%E5%A5%BD%EF%BC%8C%E6%88%91%E6%83%B3%E7%8D%B2%E5%BE%97%E6%9B%B4%E5%A4%9A%E3%80%8CAUSTIN%20BOHEMIAN%20%E7%91%A7%E7%88%BE%E3%80%8D%E8%A9%B3%E6%83%85%EF%BC%8C%E5%92%8C%E9%A0%90%E7%B4%84%E5%8F%83%E8%A7%80%E7%A4%BA%E7%AF%84%E5%96%AE%E4%BD%8D%E3%80%82" 
+       <a href="https://wa.me/85253435062?text=%E4%BD%A0%E5%A5%BD%EF%BC%8C%E6%88%91%E6%83%B3%E7%8D%B2%E5%BE%97%E6%9B%B4%E5%A4%9A%E3%80%8CAUSTIN%20BOHEMIAN%20%E7%91%A7%E7%88%BE%E3%80%8D%E8%A9%B3%E6%83%85%EF%BC%8C%E5%92%8C%E9%A0%90%E7%B4%84%E5%8F%83%E8%A7%80%E7%A4%BA%E7%AF%84%E5%96%AE%E4%BD%8D%E3%80%82" 
+         onclick="return gtag_report_conversion('https://wa.me/85253435062?text=%E4%BD%A0%E5%A5%BD%EF%BC%8C%E6%88%91%E6%83%B3%E7%8D%B2%E5%BE%97%E6%9B%B4%E5%A4%9A%E3%80%8CAUSTIN%20BOHEMIAN%20%E7%91%A7%E7%88%BE%E3%80%8D%E8%A9%B3%E6%83%85%EF%BC%8C%E5%92%8C%E9%A0%90%E7%B4%84%E5%8F%83%E8%A7%80%E7%A4%BA%E7%AF%84%E5%96%AE%E4%BD%8D%E3%80%82');">
            target="_blank" 
            class="whatsapp-float-btn"
            title="WhatsApp 查詢">
