--- a/index.html
+++ b/index.html
@@ -206,19 +206,21 @@
         </section>
 
         <!-- 第4頁：聯絡我們 -->
-        <section id="contact" class="contact">
-            <div class="contact-container">
-                <h2>聯絡我們</h2>
-                <p>預約參觀展示單位，親身體驗BOHEMIAN生活藝術</p>
-                <div class="cta">
-                    <a href="https://wa.me/85253435062?text=%E4%BD%A0%E5%A5%BD%EF%BC%8C%E6%88%91%E6%83%B3%E7%8D%B2%E5%BE%97%E6%9B%B4%E5%A4%9A%E3%80%8CAUSTIN%20BOHEMIAN%20%E7%91%A7%E7%88%BE%E3%80%8D%E8%A9%B3%E6%83%85%EF%BC%8C%E5%92%8C%E9%A0%90%E7%B4%84%E5%8F%83%E8%A7%80%E7%A4%BA%E7%AF%84%E5%96%AE%E4%BD%8D%E3%80%82" 
-                       class="btn primary" 
-                       target="_blank">
-                        銷售熱線
-                    </a>
-                </div>
-            </div>
-        </section>
+<section id="contact" class="contact">
+    <div class="contact-container">
+        <h2>聯絡我們</h2>
+        <p>預約參觀展示單位，親身體驗BOHEMIAN生活藝術</p>
+        <div class="cta">
+            <a href="https://wa.me/85253435062?text=%E4%BD%A0%E5%A5%BD%EF%BC%8C%E6%88%91%E6%83%B3%E7%8D%B2%E5%BE%97%E6%9B%B4%E5%A4%9A%E3%80%8CAUSTIN%20BOHEMIAN%20%E7%91%A7%E7%88%BE%E3%80%8D%E8%A9%B3%E6%83%85%EF%BC%8C%E5%92%8C%E9%A0%90%E7%B4%84%E5%8F%83%E8%A7%80%E7%A4%BA%E7%AF%84%E5%96%AE%E4%BD%8D%E3%80%82" 
+               onclick="return gtag_report_conversion('https://wa.me/85253435062?text=%E4%BD%A0%E5%A5%BD%EF%BC%8C%E6%88%91%E6%83%B3%E7%8D%B2%E5%BE%97%E6%9B%B4%E5%A4%9A%E3%80%8CAUSTIN%20BOHEMIAN%20%E7%91%A7%E7%88%BE%E3%80%8D%E8%A9%B3%E6%83%85%EF%BC%8C%E5%92%8C%E9%A0%90%E7%B4%84%E5%8F%83%E8%A7%80%E7%A4%BA%E7%AF%84%E5%96%AE%E4%BD%8D%E3%80%82');"
+               class="btn primary" 
+               target="_blank">
+                銷售熱線
+            </a>
+        </div>
+    </div>
+</section>
+      
     </main>
 
     <footer>
